[gd_scene load_steps=10 format=3 uid="uid://b8am4x888k45p"]

[ext_resource type="Script" path="res://Scenes/Menu/main_menu.gd" id="1_owfyi"]
[ext_resource type="PackedScene" uid="uid://bxhjh00lqxlnv" path="res://Scenes/MainScene/Game.tscn" id="2_ww1lw"]
[ext_resource type="FontFile" uid="uid://f7mrciexqi7f" path="res://Assets/Fonts/SPACE RETRO.TTF" id="3_t2bbi"]
[ext_resource type="Texture2D" uid="uid://7de6ck7s52l4" path="res://Assets/UI/Logo.png" id="4_5ck7u"]
[ext_resource type="Texture2D" uid="uid://6a826vbv5awm" path="res://Assets/UI/Button.png" id="4_pi5rh"]
[ext_resource type="Texture2D" uid="uid://ch554c13oxwbc" path="res://Assets/UI/ButtonHovor.png" id="5_10y6g"]
[ext_resource type="Texture2D" uid="uid://de8ff850uwujb" path="res://Assets/UI/BackGround/Background.png" id="7_ygb8g"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ru2uq"]
texture = ExtResource("4_pi5rh")
region_rect = Rect2(47, 132.59, 418, 139.63)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y7j5u"]
texture = ExtResource("5_10y6g")
region_rect = Rect2(47, 132.59, 418, 139.63)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_owfyi")
main_game_packed_scene = ExtResource("2_ww1lw")

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(996, 262)
scale = Vector2(1.765, 1.765)
texture = ExtResource("4_5ck7u")

[node name="Sprite2D" type="Sprite2D" parent="Logo"]
z_index = -1
position = Vector2(-564.306, -149.008)
scale = Vector2(0.566867, 0.567097)
texture = ExtResource("7_ygb8g")
offset = Vector2(960, 540)

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 134
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 179

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 738.0
offset_top = 448.0
offset_right = 1175.0
offset_bottom = 586.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_t2bbi")
theme_override_font_sizes/font_size = 61
theme_override_styles/normal = SubResource("StyleBoxTexture_ru2uq")
theme_override_styles/hover = SubResource("StyleBoxTexture_y7j5u")
text = "Start"

[node name="OptionsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 738.0
offset_top = 596.0
offset_right = 1175.0
offset_bottom = 734.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_t2bbi")
theme_override_font_sizes/font_size = 61
theme_override_styles/normal = SubResource("StyleBoxTexture_ru2uq")
theme_override_styles/hover = SubResource("StyleBoxTexture_y7j5u")
text = "Options"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 737.0
offset_top = 749.0
offset_right = 1174.0
offset_bottom = 887.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_t2bbi")
theme_override_font_sizes/font_size = 61
theme_override_styles/normal = SubResource("StyleBoxTexture_ru2uq")
theme_override_styles/hover = SubResource("StyleBoxTexture_y7j5u")
text = "Quit"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
